--- a/EmployeeManagement.Web/Pages/_Host.cshtml
+++ b/EmployeeManagement.Web/Pages/_Host.cshtml
@@ -10,11 +10,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EmployeeManagement.Web</title>
+    <title>EmployeeManagement</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="EmployeeManagement.Web.styles.css" rel="stylesheet" />
+
+
+    <link rel="stylesheet" href="_content/Blazority/lib/clr/ui/clr-ui.min.css" />
+    <link rel="stylesheet" href="_content/Blazority/lib/clr/icons/clr-icons.min.css" />
+    <link rel="stylesheet" href="_content/Blazority/blazority.min.css" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -31,5 +36,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Blazority/lib/webcomponents/custom-elements/custom-elements.min.js"></script>
+    <script src="_content/Blazority/lib/clr/icons/clr-icons.min.js"></script>
+    <script src="_content/Blazority/blazority.min.js"></script>
 </body>
 </html>
