--- a/EmployeeManagement.Web/Pages/EmployeeAdd.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeAdd.razor
@@ -1,11 +1,11 @@
-﻿@page "/EmployeeEdit/{id}"
-@inherits EmployeeEditBase
+﻿@page "/AddNewEmployee"
+@inherits EmployeeAddBase
 @using EmployeeManagement.Models.Models
 
-<EditForm Model="@EmployeeEditDTO" OnValidSubmit="HandleValidEmployeeEditSubmit">
-    <h3>Edit Employee</h3>
+<EditForm Model="@EmployeeCreateDTO" OnValidSubmit="HandleValidEmployeeAddSubmit">
+    <h3>Add Employee</h3>
     <hr />
-    <DataAnnotationsValidator/> @*Validations wll not work for complex types(navigation properties)*@
+    <DataAnnotationsValidator /> @*Validations wll not work for complex types(navigation properties)*@
     @*<ObjectGraphDataAnnotationsValidator/>*@
     <ValidationSummary />
     <div class="form-group row">
@@ -14,8 +14,8 @@
         </label>
         <div class="col-sm-10">
             <InputText id="firstName" class="form-control" placeholder="First Name"
-                       @bind-Value="EmployeeEditDTO.FirstName" />
-            <ValidationMessage For="@(() => EmployeeEditDTO.FirstName)" />
+                       @bind-Value="EmployeeCreateDTO.FirstName" />
+            <ValidationMessage For="@(() => EmployeeCreateDTO.FirstName)" />
         </div>
     </div>
     <div class="form-group row">
@@ -24,8 +24,8 @@
         </label>
         <div class="col-sm-10">
             <InputText id="lastName" class="form-control" placeholder="Last Name"
-                       @bind-Value="EmployeeEditDTO.LastName" />
-            <ValidationMessage For="@(() => EmployeeEditDTO.LastName)" />
+                       @bind-Value="EmployeeCreateDTO.LastName" />
+            <ValidationMessage For="@(() => EmployeeCreateDTO.LastName)" />
         </div>
     </div>
     <div class="form-group row">
@@ -34,8 +34,8 @@
         </label>
         <div class="col-sm-10">
             <InputText id="email" class="form-control" placeholder="Email"
-                       @bind-Value="EmployeeEditDTO.Email" />
-            <ValidationMessage For="@(() => EmployeeEditDTO.Email)" />
+                       @bind-Value="EmployeeCreateDTO.Email" />
+            <ValidationMessage For="@(() => EmployeeCreateDTO.Email)" />
         </div>
     </div>
     <div class="form-group row">
@@ -44,8 +44,8 @@
         </label>
         <div class="col-sm-10">
             <InputDate id="dob" class="form-control" placeholder="Date of Birth"
-                       @bind-Value="EmployeeEditDTO.DateOfBrith" />
-            <ValidationMessage For="@(() => EmployeeEditDTO.DateOfBrith)" />
+                       @bind-Value="EmployeeCreateDTO.DateOfBrith" />
+            <ValidationMessage For="@(() => EmployeeCreateDTO.DateOfBrith)" />
         </div>
     </div>
     <div class="form-group row">
@@ -54,20 +54,12 @@
         </label>
         <div class="col-sm-10">
             <InputSelect id="gender" class="form-control" placeholder="Gender"
-                         @bind-Value="EmployeeEditDTO.Gender">
+                         @bind-Value="EmployeeCreateDTO.Gender">
                 @foreach (var gender in Enum.GetValues(typeof(Gender)))
                 {
                     <option value="@gender">@gender</option>
                 }
             </InputSelect>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="reason" class="col-sm-2 col-form-label">
-            Reason
-        </label>
-        <div class="col-sm-10">
-            <textarea id="reason" class="form-control" placeholder="Reason" @bind="Reason" @bind:event="oninput" /><span class="text-danger"><b>Count: </b>@Reason.Length</span>
         </div>
     </div>
 
